Filter gui element fixed

--- a/jmvc/seccubus/filter/filter/views/error.ejs
+++ b/jmvc/seccubus/filter/filter/views/error.ejs
@@ -37,6 +37,13 @@ Severity:
 	<option selected disabled=true>-----</option>
 </select>
 
+<br>
+
+Issue:
+<select disabled=true filter='issue' class='filter issueFilter'>
+	<option selected disabled=true>-----</option>
+</select>
+
 Finding: <input type='text' disabled=disabled value=''>
 
 Remark: <input type='text' disabled=disabled class='filter remarkFilter' value=''>
