--- a/jmvc/seccubus/scan/create/views/init.ejs
+++ b/jmvc/seccubus/scan/create/views/init.ejs
@@ -54,4 +54,4 @@
 
 <h2>Edit your schedule here</h2>
 <button class='createSchedule' type='button' id="newSchedule">New schedule</button>
-<table id="editScanSchedule"></table>
+<table id="editCreateScanSchedule"></table>
