--- a/jmvc/seccubus/schedule/table/views/schedule.ejs
+++ b/jmvc/seccubus/schedule/table/views/schedule.ejs
@@ -20,6 +20,6 @@
 <td align='center'><%= status %></td>
 <td align='center'><%= lastRun %></td>
 <td align='center'>
-	<%  //if(typeof(noEdit) == "undefined" || noEdit == false) { %><a href='javascript://' class="edit">Edit</a><% } %>
+	<%  if(typeof(noEdit) == "undefined" || noEdit == false) { %><a href='javascript://' class="edit">Edit</a><% } %>
 	<a href='javascript://' class="destroy">Delete</a>
 </td>
