It should have a border

--- a/jmvc/seccubus/finding/edit/views/init.ejs
+++ b/jmvc/seccubus/finding/edit/views/init.ejs
@@ -67,6 +67,11 @@
 	</td><td class='noborder'>
 		<%= statusName %>
 	</td></tr>
+	<tr><td class='noborder'>
+		Issues:
+	</td><td class='noborder'>
+		<table id='issue_table_findings'></table>
+	</td></tr>
 	<tr><td class='noborder' colspan=2>
 		<input type=button newStatus=<%= status %> value='Update' class='editSetStatus'/>
 		<% if ( status == 99 ) { %>
