--- a/jmvc/seccubus/schedule/table/views/schedule.ejs
+++ b/jmvc/seccubus/schedule/table/views/schedule.ejs
@@ -1,4 +1,4 @@
-<%# Copyright 2013 Frank Breedijk                                            %>
+<%# Copyright 2013 Frank Breedijk, Petr                                      %>
 <%#                                                                          %>
 <%# Licensed under the Apache License, Version 2.0 (the "License");          %>
 <%# you may not use this file except in compliance with the License.         %>
