--- a/jmvc/seccubus/issue/table/views/init.ejs
+++ b/jmvc/seccubus/issue/table/views/init.ejs
@@ -12,7 +12,7 @@
 <%# See the License for the specific language governing permissions and      %>
 <%# limitations under the License.                                           %>
 <input type="button" class="create_issue" value='Create issue...' <%= workspace == -1 ? "disabled" : "" %>>
-Show: <input type="checkbox" class="openclose" name="status" value="Open" checked <%= workspace == -1 ? "disabled" : "" %>>Open
+Show: <input type="checkbox" class="openclose" name="status" checked value="Open" <%= workspace == -1 ? "disabled" : "" %>>Open
 <input type="checkbox" class="openclose" name="status" value="Closed" <%= workspace == -1 ? "disabled" : "" %>>Closed
 <table>
 	<tr>
@@ -28,8 +28,19 @@ Show: <input type="checkbox" class="openclose" name="status" value="Open" checke
 		<tr><td colspan=7>No issues found</td></tr>
 	<% } else { %>
 		<% for(var i = 0; i < this.length ; i++) { %>
-			<tr <%= this[i] %> <%= this[i].status == 1 ? "" : "hidden"%> class='<%= this[i].statusName %>'>
-				<%== $.View('//seccubus/issue/table/views/issue.ejs', this[i], { finding : finding } )%>
+			<tr 
+				<%= this[i] %> 
+				class='<%= this[i].statusName %>'
+				<%= this[i].status == 2 ? "hidden" : "" %>
+			>
+				<%== 
+					$.View('//seccubus/issue/table/views/issue.ejs', 
+						this[i], 
+						{ 
+							finding 	: finding
+						} 
+					)
+				%>
 			</tr>
 		<% } %>
 	<% } %>
