Issue edit dialog now clears

--- a/jmvc/seccubus/issue/edit/views/init.ejs
+++ b/jmvc/seccubus/issue/edit/views/init.ejs
@@ -44,6 +44,7 @@
 		<% if ( status == 1 ) { %>
 			<input type=button newStatus=2 value='Set to Closed' class='editSetStatus'/>
 		<% } %>
+		<input type=button value='Cancel' class='cancel'>
 			
 	</td></tr>
 </table>
