Tied bulk link edit into main gui

--- a/jmvc/seccubus/issue/select/views/init.ejs
+++ b/jmvc/seccubus/issue/select/views/init.ejs
@@ -15,7 +15,7 @@
 <% if ( this.length == 0 ) { %>
 	<%== $.View('//seccubus/issue/select/views/error.ejs') %>
 <% } else { %>
-	<option selected value=-1 disabled=true>Select a issue below</option>
+	<option selected value=-1 disabled=true>Select a issue...</option>
 	<% if ( includeNew ) { %>
 		<option value=-2>Create new issue...</option>
 	<% } %>
