--- a/jmvc/seccubus/schedule/table/views/init.ejs
+++ b/jmvc/seccubus/schedule/table/views/init.ejs
@@ -14,12 +14,11 @@
 <% if(typeof(noHead) == "undefined" || noHead == false) { %>
 	<thead>
 		<tr>
-			<th width=100>Month</th>
-			<th width=50>Week</th>
-			<th width=100>Week day</th>
-			<th width=50>Day</th>
-			<th width=50>Hour</th>
-			<th width=50>Minute</th>
+			<th width=50>Enabled</th>
+			<th width=100>Launch</th>
+			<th width=150>Starts on</th>
+			<th width=100>Repeat every</th>
+			<th width=50>Repeat on</th>
 			<th width=50>Status</th>
 			<th>Last run</th>
 			<%  //if(typeof(noEdit) == "undefined" || noEdit == false) { %>
