--- a/jmvc/seccubus/schedule/create/views/init.ejs
+++ b/jmvc/seccubus/schedule/create/views/init.ejs
@@ -13,42 +13,89 @@
 <%# limitations under the License.                                           %>
 <h2>Add news Schedule</h2>
 <table class='noborder'>
+	<tr><td class='noborder' valign='top'>
+		<label for='subject'>Enable schedule:</label> 
+	</td><td class='noborder' valign='top'>
+		<input type=checkbox name='enabled' value=1 checked>
+	</td></tr>
  	<tr><td class='noborder' valign='top'>
-		<label for='subject'>Month:</label> 
+		<label for='subject'>Launch:</label> 
 	</td><td class='noborder' valign='top'>
-		<select name='month' multiple size=7>
+		<select name='launch'>
 			<!-- <option value='*' selected>Every month</option> -->
-			<% var monthes = ['January','February','Marth','April','May','June','July','August','September','October','November','December']; %>
-			<% for( var i=1; i<=12; i++){ %>
-				<option value='<%= i %>'><%= monthes[i-1] %></option>
+			<% var types = { 'd' : 'On demand', 'o' : 'Once', 'w' : 'Weekly', 'b' : 'Bi-weekly', 'm' : 'Monthly' }; %>
+			<% for( var key in types){ %>
+				<option value='<%= key %>'><%= types[key] %></option>
 			<% } %>
 		</select>
-		<BR><BR><input type=checkbox name='month'  checked> Every month
-	</td>
-	<td class='noborder' valign='top'>
-		<label for='trigger'>Day: </label> 
+	</td></tr>
+	<tr><td class='noborder' valign='top'>
+		<label for='trigger'>Starts on: </label> 
 	</td><td class='noborder' valign='top'>
-		<select name='day' multiple size=7>
+		<% var monthes = { 'January' : 31 ,'Febrary' : 29, 'Marth' : 31, 'April' : 30, 'May' : 31, 'June' : 30, 'July' : 31, 'August' : 31, 'September' : 30,'October' : 31, 'November' : 30, 'December' : 31 }; 
+			var curMonth = new Date().getMonth()+1; 
+			var mNum=1;  
+			var maxDays = 31;
+			%>
+			
+		<select name='month'>
 			<!-- <option value='*' selected>Every day</option> -->
-			<% for(var i=1; i<=31; i++){ %>
-				<option value='<%= i %>'><%= i %></option>
+			<% for(var key in monthes){ 
+				var sel = '';
+				if( curMonth == mNum){ sel = 'selected'; maxDays = monthes[key]; }
+				%>
+				<option value='<%= mNum %>' <%= sel %> ><%= key %></option>
+			<% mNum++; } %>
+		</select>
+		
+		<select name='day'>
+			<% var curDay = new Date().getDate(); %>
+			<!-- <option value='*' selected>Every day</option> -->
+			<% for( var i=1; i<=maxDays; i++ ){ %>
+				<% var cNum = i; if(cNum < 10){ cNum = '0'+cNum; } %>
+				<option value='<%= i %>' <%= curDay == i ? 'selected' : '' %> ><%= cNum %></option>
 			<% } %>
 		</select>
-		<BR><BR><input type=checkbox name='day' checked> Every day
-	</td>
-	<td class='noborder' valign='top'>
-		<label for='trigger'>Week: </label> 
+		&nbsp; &nbsp;
+		<select name='hour'>
+			<% var curHour = new Date().getHours(); 
+			   var curMin = parseInt((new Date().getMinutes()+5)/5)*5;
+			   if(curMin > 55){ 
+			   		curMin = 0; 
+			   		curHour++; 
+			   		if(curHour > 23){ curHour = 0; }
+			   }
+			%>
+			<!-- <option value='*'  selected>Every hour</option> -->
+			<% for( var i=0; i<=23; i++ ){ %>
+				<% var cNum = i; if(cNum < 10){ cNum = '0'+cNum; } %>
+				<option value='<%= i %>' <%= curHour == i ? 'selected' : '' %> ><%= cNum %></option>
+			<% } %>
+		</select>
+		:
+		<select name='min'>
+			<!-- <option value='*' selected>*</option> -->
+			<% for( var i=0; i<=59; i+=5 ){ %>
+				<% var cNum = i; if(cNum < 10){ cNum = '0'+cNum; } %>
+				<option value='<%= i %>' <%= curMin == i ? 'selected' : '' %> ><%= cNum %></option>
+			<% } %>
+		</select>
+
+	</td></tr>
+	<tr><td class='noborder' valign='top'>
+		<label for='trigger'>Repeat every: </label> 
 	</td><td class='noborder'>
-		<select name='week' multiple size=7>
+		<% var repeatTypes = {'w' : 'week', '2w' : '2nd week', '3w' : '3rd week', '4w' : '4th week'}; %>
+		<select name='week' disabled>
+
 			<!-- <option value='*' selected>Every week</option> -->
-			<% for(var i=1; i<=5; i++){ %>
-				<option value='<%= i %>'><%= i %></option>
+			<% for( var key in repeatTypes ){ %>
+				<option value='<%= key %>'><%= repeatTypes[key] %></option>
 			<% } %>
 		</select>
-		<BR><BR><input type=checkbox name='week' checked> Every week
-	</td>
-	<td class='noborder' valign='top'>
-		<label for='trigger'>Week day: </label> 
+	</td></tr>
+	<tr><td class='noborder' valign='top'>
+		<label for='trigger'>Repeat on: </label> 
 	</td><td class='noborder' valign='top'>
 		<select name='wday' multiple size=7>
 			<% var weekdays = ['Monday', 'Tuesday', 'Wednesday', 'Thirsday', 'Friday', 'Saturday', 'Sunday']; %>
@@ -57,29 +104,8 @@
 				<option value='<%= i %>'><%= weekdays[i] %></option>
 			<% } %>
 		</select>
-		<BR><BR><input type=checkbox name='wday' checked> Every week day
-	</td><td class='noborder' valign='top'>
-		<label for='trigger'>Hour</label> 
-	</td><td class='noborder' >
-		<select name='hour' multiple size=7>
-			<!-- <option value='*'  selected>Every hour</option> -->
-			<% for(var i=0; i<=23; i++){ %>
-				<option value='<%= i %>'><%= i %></option>
-			<% } %>
-		</select>
-		<BR><BR><input type=checkbox name='hour' checked> Every hour
-	</td>
-	<td class='noborder' valign='top'>
-		<label for='trigger'>Minute: </label> 
-	</td><td class='noborder'>
-		<select name='min' multiple size=7>
-			<!-- <option value='*' selected>*</option> -->
-			<% for(var i=0; i<=59; i++){ %>
-				<option value='<%= i %>'><%= i %></option>
-			<% } %>
-		</select>
-		<BR><BR><input type=checkbox name='min' checked> Every minute
-	</td><td class='noborder' colspan=12 align='right' valign='bottom'>
+	</td></tr>
+	<tr><td class='noborder' colspan=12 align='right' valign='bottom'>
 		<input type='submit' value='Create Schedule'/>
 		<button type='button' class='cancel'>Cancel</button>
 	</td></tr>
