--- a/jmvc/seccubus/schedule/table/views/schedule.ejs
+++ b/jmvc/seccubus/schedule/table/views/schedule.ejs
@@ -11,12 +11,11 @@
 <%# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. %>
 <%# See the License for the specific language governing permissions and      %>
 <%# limitations under the License.                                           %>
-<td align='left'><%= monthT %></td>
+<td align='left'><%= enabled %></td>
+<td align='left'><%= launchT %></td>
+<td align='left'><%= monthT %>, <%= day %> <%= hour %>:<%= min %></td>
 <td align='center'><%= weekT %></td>
 <td align='left'><%= wdayT %></td>
-<td align='center'><%= dayT %></td>
-<td align='center'><%= hourT %></td>
-<td align='center'><%= minT %></td>
 <td align='center'><%= status %></td>
 <td align='center'><%= lastRun %></td>
 <td align='center'>
