--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
             if ( top.location.protocol == "https:" ) { // are we on https?
                 document.documentElement.style.display = 'block';
             } else {
-                top.location = "https://www.seccubus.com/" + top.location.pathname;
+                top.location = "https://www.seccubus.com" + top.location.pathname;
             }
         } else if ( top.location.host == "seccubus.github.io" ) { // Somehow we ended at origin
-            top.location = "https://www.seccubus.com/" + top.location.pathname;
+            top.location = "https://www.seccubus.com" + top.location.pathname;
             // Redirect to CDN url
         } else {
             var r = confirm("It seems like the page at " + top.location + "is trying to frame " + window.location + ".\nAre you ok if I redirect you to " + window.location + " to view this content?");
