--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <script>
         if ( top.location.host == "127.0.0.1:4000") { // Local Jekyll server
             document.documentElement.style.display = 'block';
-        } else if ( top.location.host == "seccubus.com" ) { // Correct URL
+        } else if ( top.location.host == "www.seccubus.com" ) { // Correct URL
             if ( top.location.protocol == "https:" ) { // are we on https?
                 document.documentElement.style.display = 'block';
             } else {
