--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <script src="{{ site.baseurl }}/js/vendor/modernizr.js"></script>
     <style> html{display:none;} </style>
     <script>
+        alert(top.location.protocol + "-" + top.location.host + "-" + top.location.pathname );
         if ( top.location.host == "127.0.0.1:4000") { // Local Jekyll server
             document.documentElement.style.display = 'block';
         } else if ( top.location.host == "www.seccubus.com" ) { // Correct URL
