API now limits the number of results to 200 by default

--- a/jmvc/seccubus/finding/table/views/init.ejs
+++ b/jmvc/seccubus/finding/table/views/init.ejs
@@ -20,6 +20,7 @@
 		checked		: checked
 	}) %>
 <% } else { %>
+	Showing <%= this.length %> findings
 	<% if(typeof noHeader == "undefined" || ! noHeader ) { %>
 		<%== $.View('//seccubus/finding/table/views/header.ejs', {
 			columns		: columns,
