Add the number of fidings to the filter control

--- a/jmvc/seccubus/filter/filter/views/error.ejs
+++ b/jmvc/seccubus/filter/filter/views/error.ejs
@@ -48,4 +48,10 @@ Finding: <input type='text' disabled=disabled value=''>
 
 Remark: <input type='text' disabled=disabled class='filter remarkFilter' value=''>
 
+max #findings: 
+<select disabled=true filter='limit' class='filter limitFIlter'>
+	<option selected disabled=true>-----</option>
+</select>
+
+
 <% if( typeof message != "undefined" ) { %><br><%= message %><% } %>
