--- a/jmvc/seccubus/filter/filter/views/init.ejs
+++ b/jmvc/seccubus/filter/filter/views/init.ejs
@@ -126,5 +126,15 @@
 
 	Remark: <input type='text' filter='remark' class='filter remarkFilter' value='<%= this.remark %>'>
 
+	Max #findings:
+	<select filter='limit' class='filter limitFilter'>
+		<option <%= fLimit == 0 ? "selected" : "d" %> value=0>No limit</option>
+		<option <%= fLimit == 50 ? "selected" : "d" %> value=50>50</option>
+		<option <%= fLimit == 100 ? "selected" : "d" %> value=100>100</option>
+		<option <%= fLimit == 200 ? "selected" : "d" %> value=200>200</option>
+		<option <%= fLimit == 500 ? "selected" : "d" %> value=500>500</option>
+		<option <%= fLimit == 1000 ? "selected" : "d" %> value=1000>1000</option>
+	</select>
+
 	<a href='javascript://' class='clearFilter'>Clear</a>
 <% } %>
