Fixes #128 - Limited result sets and fast filter logic

--- a/jmvc/seccubus/filter/filter/views/init.ejs
+++ b/jmvc/seccubus/filter/filter/views/init.ejs
@@ -34,7 +34,7 @@
 	</select>
 	
 	Hostname:
-	<select filter='hostname' class='filter hostnameFilter'>
+	<select filter='hostName' class='filter hostnameFilter'>
 		<% for(var i=0;i<this.hostname.length;i++) { %>
 			<option 
 				<% if (this.hostname[i].number == -1 ) { %>
