Notifications are done...

--- a/jmvc/seccubus/notification/table/views/notification.ejs
+++ b/jmvc/seccubus/notification/table/views/notification.ejs
@@ -1,4 +1,4 @@
-<%# Copyright 2013 Frank Breedijk                                            %>
+<%# Copyright 2017 Frank Breedijk                                            %>
 <%#                                                                          %>
 <%# Licensed under the Apache License, Version 2.0 (the "License");          %>
 <%# you may not use this file except in compliance with the License.         %>
@@ -13,7 +13,7 @@
 <%# limitations under the License.                                           %>
 <td><%= subject %></td>
 <td><%= recipients %></td>
-<td><%= event_name %></td>
+<td><%= triggerName %></td>
 <td>
 	<a href='javascript://' class="edit">Edit</a>
 	<a href='javascript://' class="destroy">Delete</a>
