--- a/jmvc/seccubus/issue/select/views/init.ejs
+++ b/jmvc/seccubus/issue/select/views/init.ejs
@@ -1,4 +1,4 @@
-<%# Copyright 2015 Frank Breedijk                                            %>
+<%# Copyright 2011-2017 Frank Breedijk                                       %>
 <%#                                                                          %>
 <%# Licensed under the Apache License, Version 2.0 (the "License");          %>
 <%# you may not use this file except in compliance with the License.         %>
@@ -13,6 +13,9 @@
 <%# limitations under the License.                                           %>
 <% this.sort(function(a,b) { return a.name > b.name }); %>
 <% if ( this.length == 0 ) { %>
+    <% if ( includeNew ) { %>
+        <option value=-2>Create new issue...</option>
+    <% } %>
 	<%== $.View('//seccubus/issue/select/views/error.ejs') %>
 <% } else { %>
 	<option selected value=-1 disabled=true>Select a issue...</option>
